Perkin-UAT/force-app/main/default/objects/INF_Application__c/fields/INF_BL__c.field-meta.xml
<CustomField>
    <fullName>INF_BL__c</fullName>
    <label>Business Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analysis-Visualisation</fullName>
            </value>
            <value>
                <fullName>Elements</fullName>
            </value>
            <value>
                <fullName>Enterprise R-D</fullName>
            </value>
            <value>
                <fullName>Imaging</fullName>
            </value>
            <value>
                <fullName>Personal Applications</fullName>
            </value>
            <value>
                <fullName>QA/QC</fullName>
            </value>
            <value>
                <fullName>Signals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>