Perkin-UAT/force-app/main/default/objects/INF_Application__c/fields/INF_KW__c.field-meta.xml
<CustomField>
    <fullName>INF_KW__c</fullName>
    <description>Enter Key words with &#39;,&#39; as separator</description>
    <inlineHelpText>Enter key words with &#39;,&#39; as separator</inlineHelpText>
    <label>Key Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>