Perkin-UAT/force-app/main/default/objects/INF_Application__c/fields/INF_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>INF_Product_Group__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spotfire</fullName>
            </value>
            <value>
                <fullName>E-Notebook</fullName>
            </value>
            <value>
                <fullName>CBOE</fullName>
            </value>
            <value>
                <fullName>iLab/Limslink</fullName>
            </value>
            <value>
                <fullName>Personal Applications</fullName>
            </value>
            <value>
                <fullName>GeoSpiza</fullName>
            </value>
            <value>
                <fullName>Columbus &amp; Volocity</fullName>
            </value>
            <value>
                <fullName>Elements</fullName>
            </value>
            <value>
                <fullName>Signals Notebook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>