Perkin-UAT/force-app/main/default/objects/INF_Application__c/fields/INF_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>INF_Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AVS</fullName>
            </value>
            <value>
                <fullName>AVC</fullName>
            </value>
            <value>
                <fullName>DSK</fullName>
            </value>
            <value>
                <fullName>ENT</fullName>
            </value>
            <value>
                <fullName>QAS</fullName>
            </value>
            <value>
                <fullName>ISS</fullName>
            </value>
            <value>
                <fullName>ELM</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>SIG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>