Perkin-UAT/force-app/main/default/objects/INF_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>INF_KW__c</columns>
    <columns>INF_Default__c</columns>
    <columns>INF_Product_Group__c</columns>
    <columns>INF_Product_Line__c</columns>
    <columns>INF_BL__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>